Fixed bug where fund transactions editing would be invisible

--- a/web/src/sass/large.scss
+++ b/web/src/sass/large.scss
@@ -481,7 +481,7 @@ button {
             flex-basis: initial;
             flex-wrap: nowrap;
         }
-        .transactions {
+        li > span.transactions {
             flex-basis: 102px;
             overflow: visible;
             .modal {
